# molu-engine

./: README.md  config.json  pyproject.toml
app/: __init__.py
module/generic/: depend.py
routes/: __init__.py
routes/api/: upload.py
routes/web/wiki/: document.py  redirect.py
