[tool.poetry]
name = "molu-engine"
version = "0.0.1"
description = "Next Generation Wiki Engine"
authors = ["SMOO <tmddn3070@gmail.com>"]
license = "GPL3.0"
readme = "README.md"
packages = [{include = "molu_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
Jinja2 = "^3.1.2"
jinja2_markdown = "^0.0.3"
motor = "^3.1.1"
meilisearch-python-async = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
